# pwe

./: .clippy.toml  .env.example  .gitattributes  .gitignore  .rustfmt.toml  BUILD_WINDOWS.md  Cargo.toml  DEVELOPMENT.md  FONT_SETUP.md  LICENSE  Makefile  PROJECT_SETUP_SUMMARY.md  QUICKREF.md  README.md  SETUP.md  TESTING_KARAOKE.md  build-msi.bat  build-msi.ps1  build.rs  flake.nix  requirements.txt  setup.sh  test_metadata.rs
.github/ISSUE_TEMPLATE/: 0-FEAT.yml  1-BUG.yml
.github/workflows/: release.yml
assets/: ICON_README.md
back/: .gitignore  default.nix  pyproject.toml
back/app/: data.py  main.py  utils.py
back/app/api/routes/: __init__.py  data.py  hello.py
back/app/db/: __init__.py  base.py
back/app/db/models/: __init__.py  data.py
back/app/routes/: __init__.py  filter.py  hello.py  place.py
back/app/schemas/: __init__.py  data.py
back/app/utils/: continent_map.py  wrapper.py
countryinfo/: default.nix
docs/: ARCHITECTURE.md  Design_Guide.md  GETTING_STARTED.md
front/Epicovid/: app.json  package-lock.json  package.json
frontend/: .gitignore  DEPENDENCIES.md  README.md  capacitor.config.ts  default.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/android/: .gitignore  build.gradle
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/java/com/mycompany/epicovid/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/desktop/: package-lock.json  package.json
frontend/desktop/src/: App.tsx
frontend/desktop/src-tauri/: tauri.conf.json
frontend/ios/: .gitignore
frontend/ios/App/App/: Info.plist
frontend/ios/App/App.xcodeproj/: project.pbxproj
frontend/mobile/: app.json  package-lock.json  package.json
frontend/scripts/: build-native.sh
frontend/shared/: package-lock.json  package.json  tsconfig.json
frontend/shared/src/: api.ts
frontend/src/: App.css  App.scss  App.tsx  index.css  index.scss  main.tsx
frontend/src-tauri/: .gitignore  tauri.conf.json
frontend/src/components/: Charts.tsx  ChartsGrid.tsx  ControlsBar.tsx  Dashboard.tsx  KpiCards.tsx  Leaderboard.tsx  MapPanel.tsx  WorldMap.tsx
frontend/src/data/: countryCoords.ts
frontend/src/hooks/: usePlatform.ts
frontend/src/native/: native.ts
frontend/src/services/: api.ts  mockApi.ts
frontend/src/types/: capacitor-ambient.d.ts  tauri-api.d.ts
installer/: README.md  build-installers.sh
nix/: back.nix  front.nix  python.nix
nix/python/: norbert.nix  spleeter.nix
old/: backup2.nix  backupflake.nix  default.nix  flake.nix  front-android.nix
old/app/: main.py
old/app/api/routes/: data.py
old/app/db/: __init__.py
old/app/db/models/: __init__.py  data.py
old2/: default.nix  pyproject.toml
old2/app/: config.py  main.py
old2/app/routes/: __init__.py  data.py
rustlings/exercises/02_functions/: functions1.rs
rustlings/exercises/09_strings/: strings4.rs
rustlings/exercises/10_modules/: modules2.rs
rustlings/exercises/11_hashmaps/: hashmaps1.rs
rustlings/exercises/12_options/: options1.rs  options2.rs
rustlings/exercises/17_tests/: tests2.rs
rustlings/exercises/18_iterators/: iterators3.rs
rustlings/exercises/quizzes/: quiz2.rs
src/: app.rs  config.rs  main.rs
src/audio/: devices.rs  generator.rs  loader.rs  metadata.rs  mod.rs  player.rs
src/lrc/: error.rs  mod.rs  parser.rs  timestamp.rs  tokenizer.rs  tokens.rs
src/network/: downloader.rs
src/ui/: mod.rs  panels.rs  settings.rs  theme.rs  widgets.rs
v2/: main.rs
v2/song/: metadata.rs  mod.rs
wix/: main.wxs
