[package]
name = "pwe-karaoke"
version = "0.1.0"
edition = "2021"
authors = ["Your Team"]
description = "Desktop karaoke application with vocal separation using Spleeter"
license = "BSD-3-Clause"
repository = "https://github.com/Ciztek/pwe"

[package.metadata.bundle]
name = "PWE Karaoke"
identifier = "com.ciztek.pwe-karaoke"
icon = ["assets/icon.png"]
version = "0.1.0"
copyright = "Copyright (c) 2025 Ciztek"
category = "Music"
short_description = "Desktop karaoke application"
long_description = "Desktop karaoke application with audio playback, library management, and vocal separation capabilities."

[dependencies]
# GUI Framework - Using eframe (egui) for desktop UI
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"

# Audio playback and processing
rodio = "0.19"
symphonia = { version = "0.5", features = ["all"] }
cpal = "0.15"

# Python integration for Spleeter (optional for cross-compilation)
pyo3 = { version = "0.22", features = ["auto-initialize"], optional = true }

# File handling and async runtime
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# File dialogs
rfd = "0.15"

# Path handling
walkdir = "2.5"

# utilities
dirs = "5.0"
enum_cycling = "0.1"
regex = "1"

[features]
default = []
spleeter = ["pyo3"]
custom-font = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Clippy lints configuration
[lints.clippy]
# Deny these (important safety/correctness issues)
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Warn on these (good practices)
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# Allow these while learning (can be overwhelming for beginners)
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }

# Specific allows for beginner-friendly development
too_many_arguments = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# But still catch important issues
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
