[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covid-dataviz"
version = "0.0.1"
description = "A COVID-19 data visualization API"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy[asyncio]",
  "aiosqlite",
  "pydantic",
  "passlib[bcrypt]",
]

[project.scripts]
EpiCoBack = "app.main:main"

[project.optional-dependencies]
dev = [
  "black",
  "isort"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["app"]
multi_line_output = 3
include_trailing_comma = true
